--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,9 @@
 
 * {
   font-family: Poppins;
-  box-sizing: border-box
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
