--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,12 @@
 ::-webkit-scrollbar {
   display: none;
 }
+
+.active-dot {
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #3498db;
+  margin-right: 5px;
+}
+
