--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -1,48 +1,104 @@
 .chat-box {
-    background-color: aliceblue;
-    padding: 10px;
-    position: relative;
-    /* display: flex; */
+  background-color: rgb(229, 239, 248);
+  padding: 10px;
+  position: relative;
+  /* display: flex; */
 }
 
 .chat-user {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 14px;
+  border-bottom: 1px solid gainsboro;
+  padding-bottom: 10px;;
 }
 
 .chat-user img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-right: 10px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
 }
 
 .chat-user-intro {
-    color: #494646;
-    display: flex;
-    align-items: center;
-    gap: 3px;
+  color: #494646;
+  display: flex;
+  align-items: center;
+  gap: 3px;
 }
 
 .chat-name-dot {
-    display: flex;
-    align-items: center;
-    margin-bottom: 2px;
-    gap: 5px;
+  display: flex;
+  align-items: center;
+  margin-bottom: 2px;
+  gap: 5px;
 }
 
 .chat-user-status {
-    font-size: 12px;
-    color:rgb(1, 142, 185);
-    line-height: 0;
-    margin-block: 5px;
+  font-size: 12px;
+  color: rgb(1, 142, 185);
+  line-height: 0;
+  margin-block: 5px;
 }
 
 .chat-info-icon {
-    cursor: pointer;
-  }
+  cursor: pointer;
+}
+
+.chat-message {
+  margin-bottom: 10px;
+  padding-block: 30px;
+  border-radius: 5px;
+}
+
+.chat-message-s .chat-message-content {
+  flex-direction: row-reverse;
+  border-top-right-radius: 10px;
+}
+
+.chat-message-content {
+  display: flex;
+  gap: 10px;
+  align-items: flex-end;
+}
+
+.chat-message-content p {
+  color: white;
+  padding: 10px 5px;
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  font-size: 12px;
+  max-width: 65%;
+}
+
+.chat-message-s .chat-message-content p {
+    background-color: rgb(126, 0, 230);
+  border-bottom-left-radius: 10px;
+}
+
+.chat-message-r .chat-message-content p {
+    background-color: #077eff;
+
+  border-bottom-right-radius: 10px;
+}
+
+.chat-avatar-time {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 10px;
+  font-size: 10px;
+  color: #494646;
+  gap: 5px;
+}
+
+.chat-avatar-time img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 5px;
+}
 
 .chat-send-input {
     width: 100%;
@@ -54,27 +110,27 @@
     align-items: center;
     gap: 10px;
     position: absolute;
-    bottom: 0; 
+    bottom: 0;
     right: 0;
-}
-
-.chat-send-input input {
+  }
+  
+  .chat-send-input input {
     flex: 1;
     padding: 0 10px;
     border: none;
     outline: none;
     background-color: transparent;
     color: #494646;
-}
-
-.chat-gallery-icon {
+  }
+  
+  .chat-gallery-icon {
     cursor: pointer;
     width: 25px;
     height: 25px;
-}
-
-.chat-send-icon {
+  }
+  
+  .chat-send-icon {
     cursor: pointer;
     width: 28px;
     height: 28px;
-}
+  }
