--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -3,6 +3,8 @@
   padding: 10px;
   position: relative;
   /* display: flex; */
+  height: 100vh;
+  overflow-y: hidden;
 }
 
 .chat-user {
@@ -50,6 +52,8 @@
   margin-bottom: 10px;
   padding-block: 30px;
   border-radius: 5px;
+  overflow-y: scroll;
+  height: calc(100vh - 8rem);
 }
 
 .chat-message-s .chat-message-content {
@@ -63,7 +67,7 @@
   align-items: flex-end;
 }
 
-.chat-message-content p {
+.chat-message-content .msg{
   color: white;
   padding: 10px 5px;
   border-top-right-radius: 10px;
@@ -72,12 +76,12 @@
   max-width: 65%;
 }
 
-.chat-message-s .chat-message-content p {
+.chat-message-s .chat-message-content .msg{
     background-color: rgb(126, 0, 230);
   border-bottom-left-radius: 10px;
 }
 
-.chat-message-r .chat-message-content p {
+.chat-message-r .chat-message-content .msg{
     background-color: #077eff;
 
   border-bottom-right-radius: 10px;
@@ -98,6 +102,11 @@
   height: 35px;
   border-radius: 50%;
   margin-right: 5px;
+}
+
+.send-img, .receive-img {
+  border-radius: 10px;
+  transition: all 0.3s;
 }
 
 .chat-send-input {
