--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -52,7 +52,6 @@
 .chat-message {
   margin-bottom: 10px;
   padding-block: 20px;
-  border-radius: 5px;
   overflow-y: scroll;
   height: calc(100vh - 8rem);
 }
@@ -66,6 +65,7 @@
   display: flex;
   gap: 10px;
   align-items: flex-end;
+  margin-bottom: 8px;
 }
 
 .chat-message-content .msg{
