--- a/src/components/LiftSidebar/LiftSidebar.css
+++ b/src/components/LiftSidebar/LiftSidebar.css
@@ -1,5 +1,5 @@
 .ls {
-    background-color: #8a2be2;
+    background-color: #56028f;
     height: 100vh;
     /* overflow-y: hidden; */
 }
@@ -36,12 +36,19 @@
     align-items: center;
     padding: 0 15px;
     border-radius: 5px;
-    background-color: #56028f;
-    color: #dbdee0;
+    background-color: #8a2be2;
     font-size: 14px;
     border: none;
     padding: 10px 10px;
     width: 100%;
+}
+
+.ls-search input::placeholder {
+    color: #dbdee0;
+}
+
+.ls-search input:focus {
+    color: white;
 }
 
 .ls-search input {
@@ -67,7 +74,7 @@
     align-items: center;
     justify-content: space-between;
     overflow-x: hidden;
-    margin-top: 2rem;
+    margin-top: 1rem;
     overflow-y: auto;
     max-height: 76%;
     padding-bottom: 10%;
@@ -99,6 +106,7 @@
     box-shadow: 1px 15px 20px 2px rgba(0, 0, 0, 0.1);
     border-top-left-radius: 3rcap;
     border-bottom-left-radius: 3rcap;
+    cursor: pointer;
 }
 
 .ls-each-profile:hover {
@@ -114,11 +122,18 @@
 
 .ls-profile-info {
     color: floralwhite;
-    line-height: 0;
+    line-height: 12px;
+}
+
+.ls-profile-info h1 {
+    font-size: 14px;
+    color: white;
+    /* text-transform: uppercase; */
+    margin-bottom: 5px;
 }
 
 .ls-profile-info p{
-    font-size: 13px;
-    color: rgb(219, 218, 216);
+    font-size: 11px;
+    color: rgb(179, 177, 174);
     text-wrap: nowrap;
 }
