--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,16 @@
   margin-right: 5px;
 }
 
+.app-loading {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  right: 0;
+  min-height: 100vh;
+  background: url(/background.png) no-repeat center/cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
