--- a/src/Pages/Chat/Chat.css
+++ b/src/Pages/Chat/Chat.css
@@ -14,5 +14,5 @@
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
     width: 100%;
-    background-color: aquamarine;
+    background-color: rgb(229, 239, 248);
 }
