--- a/src/components/RightSidebar/RightSidebar.css
+++ b/src/components/RightSidebar/RightSidebar.css
@@ -26,10 +26,14 @@
 
 .rs-bio-img {
     max-width: 100px;
+    min-width: 100px;
     max-height: 100px;
     border-radius: 50%;
     border-bottom: 10px;
+    object-fit: cover;
+
 }
+
 
 .rs-bio-name {
     color: floralwhite;
