--- a/src/Pages/Chat/Chat.css
+++ b/src/Pages/Chat/Chat.css
@@ -16,3 +16,9 @@
     width: 100%;
     background-color: rgb(229, 239, 248);
 }
+
+@media (max-width: 780px) {
+    .chat-container {
+        display: block;
+    }
+}
