--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -72,6 +72,108 @@
   gap: 10px;
   /* align-items: baseline; */
   margin-bottom: 8px;
+  position: relative;
+}
+
+.text-msg .menu_msg_div {
+  max-width: 65%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.menu_msg_div, .menu-msg-div {
+  position: relative;
+  max-width: 65%;
+
+  &::before {
+    position: absolute;
+    content: '';
+    inset: 0;
+    transform: scaleX(1.05);
+    background-color: transparent;
+  }
+}
+
+.menu-msg-div {
+  display: flex;
+  position: relative;
+}
+
+.menu-msg-div .r-message-menu {
+  position: absolute;
+  left: 100%;
+  display: none;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+}
+
+.r-img-div .r-message-menu{
+  transform: translate(-20px, 5px);
+}
+
+.menu-msg-div:hover .r-message-menu {
+  display: block;
+}
+
+.menu_msg_div:hover .message-menu {
+  display: block;
+}
+
+.message-menu {
+  position: absolute;
+  max-width: 20px;
+  max-height: 20px;
+  cursor: pointer;
+  left: 0;
+  top: 0;
+  transform: translate(0px, 5px);
+  display: none;
+}
+
+.msg .message-menu {
+  transform: translate(-22px, 5px);
+}
+
+.menu-list {
+  position: absolute;
+  /* right: calc(100% + 10px); */
+  color: red;
+  box-shadow: 1px 1px 5px 1px gray;
+  padding: .5rem;
+  border-radius: 5px;
+  font-size: 12px;
+}
+
+.s-msg-menu > .menu-list {
+  top: 8px;
+  right: calc(100% + 20px);
+}
+
+.s-img-msg_menu > .menu-list {
+  right: 100%;
+}
+
+.r-msg-menu > .menu-list {
+  left: calc(100% + 20px);
+}
+
+.menu-list ul {
+  position: relative;
+  
+  &::before {
+  position: absolute;
+  content: '';
+  inset: 0;
+  transform: scale(3);
+  z-index: 10;
+}
+}
+
+li {
+  position: relative;
+  cursor: pointer;
+  z-index: 100;
 }
 
 .chat-message-content .msg{
@@ -80,7 +182,6 @@
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
   font-size: 12px;
-  max-width: 65%;
 }
 
 .chat-message-s .chat-message-content .msg{
@@ -129,7 +230,27 @@
 .send-img, .receive-img {
   border-radius: 10px;
   transition: all 0.3s;
+  cursor: zoom-in !important;
+  z-index: 1;
+  max-width:95%;
+  position: relative;
+  transition: all 0.3s;
 }
+
+.receive-img-zoom{
+  transform: scale(1.3);
+  transform-origin: left;
+  z-index: 2;
+  cursor: zoom-out !important;
+}
+
+.send-img-zoom{
+  transform: scale(1.3);
+  transform-origin: right;
+  z-index: 2;
+  cursor: zoom-out !important;
+}
+
 
 .chat-send-input {
     width: 100%;
@@ -161,7 +282,31 @@
   }
   
   .chat-send-icon {
-    cursor: pointer;
     width: 28px;
     height: 28px;
   }
+
+  .start_chat_btn {
+    display: none;
+    max-width: 50px;
+    position: absolute;
+    bottom: 50px;
+    z-index: 2;
+    transition: all 0.3s;
+
+    &:hover {
+      transform: scale(1.07);
+    }
+  }
+
+
+  @media screen and (max-width: 780px) {
+    .chat-box {
+      /* width: 100vw; */
+      /* display: block; */
+    }
+    .start_chat_btn {
+      display: block
+    }
+  }
+
