--- a/src/components/LiftSidebar/LiftSidebar.css
+++ b/src/components/LiftSidebar/LiftSidebar.css
@@ -1,182 +1,232 @@
 .ls {
-    background-color: #56028f;
-    height: 100vh;
-    /* overflow-y: hidden; */
+  background-color: #56028f;
+  height: 100vh;
+  transition: all .3s;
+  z-index: 1000;
+  /* overflow-y: hidden; */
 }
 
 .ls-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-    padding: 15px;
-    color: white;
-    flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 15px;
+  color: white;
+  flex-shrink: 0;
 }
 
 .ls-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    position: relative;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: relative;
 }
 
 .ls-logo {
-    max-width: 120px;
-    cursor: pointer;
+  max-width: 120px;
+  cursor: pointer;
 }
 
 .ls-menu-icon {
-    max-width: 20px;
-    cursor: pointer;
+  position: relative;
+  max-width: 20px;
+  cursor: pointer;
 }
 
 .ls-dropdown-menu {
-    position: absolute;
-    background-color: white;
-    top: 100%;
-    right: 0;
-    padding: .5rem 1rem;
-    border-radius: 5px;
-    color: black;
-    font-size: 12px;
-    display: none;
-    margin-top: -5px;
-    margin-right: 5px;
+  position: absolute;
+  background-color: white;
+  top: 100%;
+  right: 0;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  color: black;
+  font-size: 12px;
+  display: none;
+  margin-top: -5px;
+  margin-right: 5px;
 }
 
 .ls-menu-icon:hover + .ls-dropdown-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .ls-dropdown-menu:hover {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.ls-dropdown-icon {
+  width: 20px;
+  height: 20px;
+  aspect-ratio: 1/1;
+  object-fit: fill;
 }
 
 .ls-dropdown-menu li {
-    border-bottom: 1px solid rgb(214, 209, 209);
-    padding: 5px;
-    font-weight: 500;
-    width: 100%;
+  border-bottom: 1px solid rgb(214, 209, 209);
+  padding: 5px;
+  font-weight: 500;
+  width: 100%;
 }
 
 .ls-dropdown-menu li:last-child {
-    border-bottom: 0;
+  border-bottom: 0;
 }
 
 .ls-dropdown-menu li:hover {
-    color: #56028f;
+  color: #56028f;
 }
 
 .ls-search {
-    display: flex;
-    align-items: center;
-    padding: 0 15px;
-    border-radius: 5px;
-    background-color: #8a2be2;
-    font-size: 14px;
-    border: none;
-    padding: 10px 10px;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  border-radius: 5px;
+  background-color: #8a2be2;
+  font-size: 14px;
+  border: none;
+  padding: 10px 10px;
+  width: 100%;
 }
 
 .ls-search input::placeholder {
-    color: #dbdee0;
+  color: #dbdee0;
 }
 
 .ls-search input:focus {
-    color: white;
+  color: white;
 }
 
 .ls-search input {
-    flex: 1;
-    padding: 0 10px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: #dbdee0;
+  flex: 1;
+  padding: 0 10px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #dbdee0;
 }
 
 .ls-search img {
-    width: 20px;
-    height: 20px;
-    aspect-ratio: 1/1;
-    object-fit:fill;
+  width: 20px;
+  height: 20px;
+  aspect-ratio: 1/1;
+  object-fit: fill;
 }
 
 .ls-main {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    overflow-x: hidden;
-    margin-top: 1rem;
-    overflow-y: auto;
-    max-height: 76%;
-    padding-bottom: 10%;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  overflow-x: hidden;
+  margin-top: 1rem;
+  overflow-y: auto;
+  max-height: 76%;
+  padding-bottom: 10%;
 
-    @media screen and (min-height: 480px) and (max-height: 590px) {
-        max-height: 68%;
-    }
+  @media screen and (min-height: 480px) and (max-height: 590px) {
+    max-height: 68%;
+  }
 
-    @media screen and (min-height: 378px) and (max-height: 480px) {
-        max-height: 60%;
-    }
+  @media screen and (min-height: 378px) and (max-height: 480px) {
+    max-height: 60%;
+  }
 
-    @media screen and (max-height: 378px) {
-        max-height: 50%;
-    }
+  @media screen and (max-height: 378px) {
+    max-height: 50%;
+  }
 }
 
-
-
-
 .ls-each-profile {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    padding-block: 3px;
-    margin-left: 5px;
-    width: 100%;
-    /* border: 1px solid #9c12f8; */
-    box-shadow: 1px 15px 20px 2px rgba(0, 0, 0, 0.1);
-    border-top-left-radius: 3rcap;
-    border-bottom-left-radius: 3rcap;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding-block: 3px;
+  margin-left: 5px;
+  width: 100%;
+  /* border: 1px solid #9c12f8; */
+  box-shadow: 1px 15px 20px 2px rgba(0, 0, 0, 0.1);
+  border-top-left-radius: 3rcap;
+  border-bottom-left-radius: 3rcap;
+  cursor: pointer;
 }
 
 .ls-each-profile:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .ls-profile-img {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    margin-left: 3px;
-    object-fit: cover;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-left: 3px;
+  object-fit: cover;
 }
 
 .ls-profile-info {
-    color: floralwhite;
-    line-height: 12px;
+  color: floralwhite;
+  line-height: 12px;
 }
 
 .ls-profile-info h1 {
-    font-size: 14px;
-    color: white;
-    /* text-transform: uppercase; */
-    margin-bottom: 5px;
+  font-size: 14px;
+  color: white;
+  /* text-transform: uppercase; */
+  margin-bottom: 5px;
 }
 
-.ls-profile-info p{
-    font-size: 11px;
-    color: rgb(179, 177, 174);
-    text-wrap: nowrap;
+.ls-profile-info p {
+  font-size: 11px;
+  color: rgb(179, 177, 174);
+  text-wrap: nowrap;
+}
+
+.LS_hide {
+    transform: translateX(-19rem);
+}
+
+/* .LS_unhide {
+  transform: translateX(0px);
+} */
+.close_LS_btn {
+  display: none;
+}
+
+
+@media screen and (min-width: 769px) {
+  .ls {
+    transform: translateX(0px);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .ls {
+    position: absolute;
+    top: 0;
+    z-index: 1000;
+  }
+
+  .close_LS_btn {
+    display: block;
+    position: absolute;
+    z-index: 100;
+    left : 102%;
+    top: 5px;
+    color: white;
+    background-color: #56028f;
+    width: 2rem;
+    border-radius: 50%;
+  }
+
+  .ls-container {
+    /* display: none; */
+  }
 }
