--- a/src/components/RightSidebar/RightSidebar.css
+++ b/src/components/RightSidebar/RightSidebar.css
@@ -27,7 +27,7 @@
 .rs-bio-img {
     max-width: 100px;
     min-width: 100px;
-    max-height: 100px;
+    height: 100px;
     border-radius: 50%;
     border-bottom: 10px;
     object-fit: cover;
@@ -120,4 +120,10 @@
 .rs-logout-btn:hover {
     /* background-color: #56028f; */
     opacity: .95;
+}
+
+@media screen and (max-width: 780px) {
+    .rs {
+        display: none;
+    }
 }
