--- a/src/components/RightSidebar/RightSidebar.css
+++ b/src/components/RightSidebar/RightSidebar.css
@@ -60,7 +60,6 @@
     flex: 1;
     max-height: calc(100vh - 15.4rem) ;
     /* overflow-y: auto; */
-    padding-bottom: 20px;
     border-top: 3px solid white;
     /* border-left: 3px solid #56028f;
     border-right: 3px solid #56028f; */
@@ -87,13 +86,15 @@
     padding-inline: 12px;
     max-height: calc(100vh - 20rem);
     overflow-y: scroll;
+    padding-bottom: 4rem;
 }
 
 .rs-media-items img {
-    max-width: 100%;
-    max-height: 100%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-}
+    width: 100px; /* Set the desired width */
+    height: 80px; /* Set the desired height */
+    object-fit: cover; /* Ensures the image covers the entire area */
+    border-radius: 5px; /* Optional: Adds rounded corners */
+  }
 
 .rs-logout-div {
     position: absolute; /* Positioned relative to the parent container */
