--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -5,6 +5,7 @@
   /* display: flex; */
   height: 100vh;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .chat-user {
@@ -82,93 +83,233 @@
   justify-content: flex-end;
 }
 
-.menu_msg_div, .menu-msg-div {
+.menu_msg_div,
+.menu-msg-div {
   position: relative;
+  display: flex;
   max-width: 65%;
 
   &::before {
     position: absolute;
-    content: '';
+    content: "";
     inset: 0;
     transform: scaleX(1.05);
     background-color: transparent;
   }
 }
 
+/* --- Menu Div ---- */
 .menu-msg-div {
-  display: flex;
+  /* display: flex; */
   position: relative;
 }
 
-.menu-msg-div .r-message-menu {
+/* ---- Receiver Message & Menu */
+
+.r-MsgMenu-sect {
+  position: relative;
+  display: flex;
+  max-width: 65%;
+}
+.r-MsgMenu-sect .r-message-menu {
+  width: 30px;
+  height: 32px;
+  border-radius: 5px;;
+  z-index: 110;
+  background-color: #3b484bad;
+  display: none;
   position: absolute;
   left: 100%;
-  display: none;
-  cursor: pointer;
+  margin-left: 5px;
+  transition: all 0.3s;
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    transform: scale(3, 3); 
+    /* transform: scale(); */
+  }
+}
+
+.r-message-menu .menu-list {
+  position: absolute !important;
+  left: 100%;
+}
+
+.r-MsgMenu-sect:hover .r-message-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.r-message-menu img{
+  position: relative;
   width: 20px;
   height: 20px;
-}
-
-.r-img-div .r-message-menu{
-  transform: translate(-20px, 5px);
-}
-
-.menu-msg-div:hover .r-message-menu {
-  display: block;
-}
-
-.menu_msg_div:hover .message-menu {
-  display: block;
-}
-
-.message-menu {
-  position: absolute;
-  max-width: 20px;
-  max-height: 20px;
   cursor: pointer;
-  left: 0;
-  top: 0;
-  transform: translate(0px, 5px);
-  display: none;
+  z-index: 12;
 }
 
-.msg .message-menu {
-  transform: translate(-22px, 5px);
-}
-
-.menu-list {
+.r-message-menu .menu-list {
   position: absolute;
-  /* right: calc(100% + 10px); */
+  left : calc(100% + 5px);
   color: red;
   box-shadow: 1px 1px 5px 1px gray;
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 5px;
   font-size: 12px;
 }
 
-.s-msg-menu > .menu-list {
+/* ---- Receiver Image Menu ---- */
+
+
+.r-ImgMenu-sect {
+  position: relative;
+  display: flex;
+  max-width: 65%;
+}
+
+.r-ImgMenu-sect .r-message-menu {
+  position: absolute;
+  left: 100%;
+  width: 30px;
+  height: 32px;
+  border-radius: 5px;;
+  z-index: 110;
+  background-color: #b1aeae;
+  display: none;
+  margin-left: 5px;
+  transition: all 0.3s;
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    transform: scale(3, 3); 
+    /* transform: scale(); */
+  }
+}
+
+.r-ImgMenu-sect:hover .r-message-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+/* ---- Sender Image Menu ---- */
+.s-ImgMenu-sect {
+  display: flex;
+  position: relative;
+  max-width: 65%;
+}
+
+.s-ImgMenu-sect .s-message-menu {
+  position: absolute;
+  right: 100%;
+  width: 30px;
+  height: 32px;
+  border-radius: 5px;;
+  z-index: 110;
+  background-color: #888484;
+  display: none;
+  margin-right: 5px;
+  transition: all 0.3s;
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    transform: scale(3, 3); 
+    /* transform: scale(); */
+  }
+}
+
+.s-ImgMenu-sect:hover .s-message-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.s-message-menu img{
+  position: relative;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  z-index: 12;
+}
+
+.s-message-menu .menu-list {
+  position: absolute;
+  right: calc(100% + 5px);
+  color: red;
+  box-shadow: 1px 1px 5px 1px gray;
+  padding: 0.5rem;
+  border-radius: 5px;
+  font-size: 12px;
+}
+
+/* ---- Sender Message Menu ---- */
+.s-MsgMenu-sect {
+  display: flex;
+  position: relative;
+  max-width: 65%;
+}
+
+.s-MsgMenu-sect .s-message-menu {
+  position: absolute;
+  right: 100%;
+  width: 30px;
+  height: 32px;
+  border-radius: 5px;;
+  z-index: 110;
+  background-color: #3b484bad;
+  display: none;
+  margin-right: 5px;
+  transition: all 0.3s;
+
+  &::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    transform: scale(3, 3); 
+    /* transform: scale(); */
+  }
+}
+
+.s-MsgMenu-sect:hover .s-message-menu {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.s-msg-div > .menu-list {
   top: 8px;
   right: calc(100% + 20px);
 }
 
 .s-img-msg_menu > .menu-list {
+  position: absolute;
   right: 100%;
 }
 
-.r-msg-menu > .menu-list {
+.r-msg-div > .menu-list {
   left: calc(100% + 20px);
 }
 
 .menu-list ul {
   position: relative;
-  
+
   &::before {
-  position: absolute;
-  content: '';
-  inset: 0;
-  transform: scale(3);
-  z-index: 10;
-}
+    position: absolute;
+    content: "";
+    inset: 0;
+    transform: scale(3);
+    z-index: 10;
+  }
 }
 
 li {
@@ -177,7 +318,7 @@ li {
   z-index: 100;
 }
 
-.chat-message-content .msg{
+.chat-message-content .msg {
   color: white;
   padding: 10px 10px;
   border-top-right-radius: 10px;
@@ -185,20 +326,20 @@ li {
   font-size: 12px;
 }
 
-.chat-message-s .chat-message-content .msg{
+.chat-message-s  .msg {
   border-bottom-left-radius: 10px;
 }
-.chat-message-r .chat-message-content .msg{
+.chat-message-r .msg {
   border-bottom-right-radius: 10px;
 }
 
-.msg-clr{
+.msg-clr {
   background-color: #077eff;
 }
 
-.msg-del-clr{
-    background-color: #888484;
-    font-style: italic;
+.msg-del-clr {
+  background-color: #888484;
+  font-style: italic;
 }
 
 .chat-message-s .chat-avatar-time {
@@ -218,12 +359,12 @@ li {
   text-align: right;
   font-size: 10px;
   color: #494646;
-}    
+}
 
 .chat-message-r .chat-time {
   font-size: 10px;
   color: #494646;
-}    
+}
 
 .chat-avatar-time .msg-avatar {
   width: 35px;
@@ -233,107 +374,113 @@ li {
   object-fit: cover;
 }
 
-.send-img, .receive-img {
+.send-img,
+.receive-img {
   border-radius: 10px;
   transition: all 0.3s;
   cursor: zoom-in !important;
   z-index: 1;
-  max-width:95%;
+  max-width: 95%;
   position: relative;
   transition: all 0.3s;
 }
 
-.receive-img-zoom{
+.receive-img-zoom {
   transform: scale(1.3);
   transform-origin: left;
   z-index: 2;
   cursor: zoom-out !important;
 }
 
-.send-img-zoom{
+.send-img-zoom {
   transform: scale(1.3);
   transform-origin: right;
   z-index: 2;
   cursor: zoom-out !important;
 }
 
-
 .chat-send-input {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-  }
-  
-  .chat-send-input input {
-    flex: 1;
-    padding: 0 10px;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: #494646;
-  }
-  
-  .chat-gallery-icon {
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
-  }
-  
-  .chat-send-icon {
-    width: 28px;
-    height: 28px;
-  }
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
 
+.chat-send-input input {
+  flex: 1;
+  padding: 0 10px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  color: #494646;
+}
+
+.chat-gallery-icon {
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+}
+
+.chat-send-icon {
+  width: 28px;
+  height: 28px;
+}
+
+.start_chat_btn {
+  display: none;
+  max-width: 50px;
+  position: fixed;
+  bottom: 50px;
+  z-index: 2;
+  transition: all 0.3s;
+
+  &:hover {
+    transform: scale(1.07);
+  }
+}
+
+.loader {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #3498db;
+  width: 28px !important;
+  height: 28px !important;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .chat-box {
+    /* width: 100vw; */
+    /* display: block; */
+  }
   .start_chat_btn {
-    display: none;
-    max-width: 50px;
-    position: fixed;
-    bottom: 50px;
-    z-index: 2;
-    transition: all 0.3s;
-
-    &:hover {
-      transform: scale(1.07);
-    }
+    display: block;
   }
-
-  .loader {
-    border: 5px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 5px solid #3498db;
-    width: 28px;
-    height: 28px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
-    animation: spin 2s linear infinite;
-  }
-  
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-  }
-  
-
-  @media screen and (max-width: 780px) {
-    .chat-box {
-      /* width: 100vw; */
-      /* display: block; */
-    }
-    .start_chat_btn {
-      display: block
-    }
-  }
-
+}
