--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -3,7 +3,8 @@
   padding: 10px;
   position: relative;
   /* display: flex; */
-  height: 100vh;
+  /* height: 100vh; */
+  height: 100%;
   overflow-y: hidden;
   overflow-x: hidden;
 }
@@ -414,7 +415,7 @@ li {
 }
 
 .chat-send-input input {
-  flex: 1;
+  width: 100%;
   padding: 0 10px;
   border: none;
   outline: none;
