--- a/src/components/LiftSidebar/LiftSidebar.css
+++ b/src/components/LiftSidebar/LiftSidebar.css
@@ -138,10 +138,10 @@
   overflow-x: hidden;
   margin-top: 1rem;
   overflow-y: auto;
-  max-height: 76%;
+  max-height: calc(100vh - 9rem);
   padding-bottom: 10%;
 
-  @media screen and (min-height: 480px) and (max-height: 590px) {
+  /* @media screen and (min-height: 480px) and (max-height: 590px) {
     max-height: 68%;
   }
 
@@ -151,7 +151,7 @@
 
   @media screen and (max-height: 378px) {
     max-height: 50%;
-  }
+  } */
 }
 
 .ls-each-profile {
